<resources>
    <string name="app_name">R1MQTTApp</string>
    <string name="action_restartClient">Restart Client</string>
    <string name="action_Info">Info</string>
    <string name="action_Mystery">¿?</string>
    <string name="car_image">Car Image</string>
    <string name="pacifica_image">Pacifica Image</string>
    <string name="lock">Lock</string>
    <string name="start">start</string>
    <string name="unlock">unlock</string>
    <string name="stop">stop</string>
    <string name="horns">horns</string>
    <string name="unlock_lock">Unlock / Lock</string>
    <string name="start_stop">Start / Stop</string>
    <string name="horns_amp_lights"><![CDATA[Horns & Lights]]></string>
</resources>
